<resources>
    <string name="app_name">bmi</string>
    <string name="bmi_hello">哈囉!BMI</string>
    <string name="bmi_height">身高 (cm)</string>
    <string name="bmi_weight">體重 (kg)</string>
    <string name="bmi_btn">計算BMI值</string>
    <string name="bmi_result">你的BMI值是</string>
    <string name="advice_light">你該多吃點</string>
    <string name="advice_average">體型很棒喔!</string>
    <string name="advice_heavy">你該節食了</string>
    <string name="action_test">測試</string>
    <string name="clear_btn">清除</string>

    <string name="test_service">service</string>
    <string name="startService">StartService</string>
    <string name="stopService">StopService</string>
    <string name="bindService">Bind</string>
    <string name="unbindService">Unbind</string>
    <string name="getServiceStatus">GetStatus</string>

    <string name="test_broadcast">broadcast</string>
    <string name="sendBroadcast">SendBroadcast</string>
</resources>
